--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -823,6 +823,13 @@
                 "role_created_at": "Создана:",
                 "role_permissions": "Права доступа:"
             },
+            "posts": {
+                "header": "Посты",
+                "visibility": "Видемость:",
+                "edited_by": "Отредактированно:",
+                "search_placeholder": "Поиск",
+                "posts_count": "Постов: "
+            },
             "members": {
                 "header": "Участники",
                 "all_members": "Все участники",
