--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -813,7 +813,7 @@
                 "links": "Ссылки",
                 "url": "URL группы",
                 "url_tooltip": "Копировать URL в буфер обмена",
-                "id": "ID группы",
+                "id": "ID группы"
                 "id_tooltip": "Скопировать ID в буфер обмена",
                 "joined_at": "Присоединился",
                 "roles": "Роли",
@@ -824,11 +824,11 @@
                 "role_permissions": "Права доступа:"
             },
             "posts": {
-                "header": "Посты",
+                "header": "Объявления",
                 "visibility": "Видемость:",
                 "edited_by": "Отредактированно:",
                 "search_placeholder": "Поиск",
-                "posts_count": "Постов: "
+                "posts_count": "Объявлений: "
             },
             "members": {
                 "header": "Участники",
