--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -813,7 +813,7 @@
                 "links": "Ссылки",
                 "url": "URL группы",
                 "url_tooltip": "Копировать URL в буфер обмена",
-                "id": "ID группы"
+                "id": "ID группы",
                 "id_tooltip": "Скопировать ID в буфер обмена",
                 "joined_at": "Присоединился",
                 "roles": "Роли",
