--- a/html/src/localization/zh-CN/en.json
+++ b/html/src/localization/zh-CN/en.json
@@ -379,6 +379,7 @@
                     "header": "高级设置",
                     "launch_options": "启动选项",
                     "screenshot_metadata": "屏幕截图元数据查看器",
+                    "vrc_registry_backup": "VRC 设置选项备份工具",
                     "common_folders": "常用文件夹",
                     "pending_offline": {
                         "header": "待确认离线",
@@ -513,12 +514,12 @@
     "dialog": {
         "user": {
             "status": {
-                "active": "Active",
-                "offline": "Offline",
-                "online": "Online",
-                "join_me": "Join Me",
-                "ask_me": "Ask Me",
-                "busy": "Do Not Disturb"
+                "active": "活跃中",
+                "offline": "离线",
+                "online": "在线",
+                "join_me": "加入我",
+                "ask_me": "询问我",
+                "busy": "请勿打扰"
             },
             "previous_display_names": "曾使用的显示名称：",
             "tags": {
@@ -533,7 +534,7 @@
                 "invite_with_message": "发送带消息的邀请",
                 "request_invite": "请求加入",
                 "request_invite_with_message": "发送带消息的加入请求",
-                "invite_to_group": "邀请到群组",
+                "invite_to_group": "邀请加入群组",
                 "manage_gallery_icon": "管理相册 / 图标",
                 "accept_friend_request": "接受好友申请",
                 "decline_friend_request": "回绝好友申请",
@@ -543,8 +544,8 @@
                 "show_fallback_avatar": "显示备用模型信息",
                 "show_previous_instances": "显示以前一起加入过的房间",
                 "show_previous_images": "显示以前使用过的图片",
-                "moderation_block": "封锁",
-                "moderation_unblock": "解除封锁",
+                "moderation_block": "屏蔽",
+                "moderation_unblock": "解除屏蔽",
                 "moderation_mute": "静音",
                 "moderation_unmute": "解除静音",
                 "moderation_hide_avatar": "隐藏模型",
@@ -589,8 +590,8 @@
                 "avatar_cloning": "是否允许克隆模型",
                 "avatar_cloning_allow": "允许",
                 "avatar_cloning_deny": "不允许",
-                "home_location": "出生点",
-                "id": "",
+                "home_location": "",
+                "id": "用户ID",
                 "id_tooltip": "复制到剪贴板",
                 "copy_id": "复制 ID",
                 "copy_url": "复制URL",
@@ -740,8 +741,8 @@
                 "refresh": "刷新",
                 "select": "选择模型",
                 "select_fallback": "选择为后备模型",
-                "block": "封锁模型",
-                "unblock": "解除封锁模型",
+                "block": "屏蔽模型",
+                "unblock": "解除屏蔽模型",
                 "show_previous_images": "显示曾使用的图片",
                 "make_public": "设为公开",
                 "make_private": "设为私人",
@@ -797,10 +798,11 @@
                 "refresh": "刷新",
                 "unsubscribe": "忽略群组通知",
                 "subscribe": "接收群组通知",
-                "invite_to_group": "邀请到群组",
+                "invite_to_group": "邀请好友加入群组",
                 "visibility_everyone": "可见性：所有人",
                 "visibility_friends": "可见性：好友",
-                "visibility_hidden": "可见性：隐藏",
+                "visibility_hidden": "可见性：隐藏",          
+                "moderation_tools": "成员管理",
                 "leave": "离开群组"
             },
             "info": {
@@ -849,7 +851,9 @@
                 },
                 "unsubscribed_announcements": "不接收公告通知",
                 "visibility": "可见性:",
-                "representing": "该用户在其名片上展示该群组"
+                "representing": "该用户在其名片上展示该群组",
+                "manager_notes": "管理备注:",
+                "search": "搜索"
             },
             "gallery": {
                 "header": "相册"
@@ -867,7 +871,8 @@
             "header": "邀请玩家",
             "select_placeholder": "选择好友",
             "invite_with_message": "邀请消息",
-            "invite": "邀请"
+            "invite": "邀请",
+            "friends_in_instance": "在房间里的好友"
         },
         "social_status": {
             "header": "社交状态",
@@ -1106,7 +1111,7 @@
             "add_item": "新增项目"
         },
         "invite_to_group": {
-            "header": "邀请到群组",
+            "header": "邀请好友加入群组",
             "description": "请不要滥用邀请功能，短时间内邀请大量玩家加入群组会导致你的账户被封禁。",
             "choose_group_placeholder": "选择群组",
             "groups": "群组",
@@ -1230,6 +1235,44 @@
             "copy_image": "复制图片",
             "open_folder": "打开文件夹",
             "upload": "上传"
+        },
+        "registry_backup": {
+            "header": "VRC 设置选项备份工具",
+            "backup": "备份",
+            "restore": "还原",
+            "save_to_file": "保存到文件",
+            "delete": "删除",
+            "restore_from_file": "从文件恢复",
+            "reset": "重置",
+            "name": "名称",
+            "date": "日期",
+            "action": "操作",
+            "auto_backup": "只要VRCX在运行，就会每周自动备份一次VRC的设置项，您也可以在这里手动备份和恢复您的VRC设置项",
+            "restore_prompt": "注意到您已启用 VRC 设置选项的自动备份，但这台计算机上没有发现任何备份。如果您想从备份中恢复，可以从此处进行恢复。"
+        },
+        "group_member_moderation": {
+            "header": "群组成员管理",
+            "notes": "备注",
+            "note_placeholder": "点击这里添加备注",
+            "actions": "操作",
+            "kick": "踢出",
+            "ban": "封禁",
+            "save_note": "保存备注",
+            "group_members": "群组成员",
+            "progress": "操作进度:",
+            "display_name": "显示名称",
+            "visibility": "可见性",
+            "avatar": "模型",
+            "joined_at": "加入于",
+            "note": "备注",
+            "roles": "身份组",
+            "selected_users": "已选择的用户",
+            "select_all": "全选",
+            "cancel": "取消",
+            "choose_roles_placeholder": "选择身份组",
+            "selected_roles": "已选择的身份组",
+            "remove_roles": "移除身份组",
+            "add_roles": "添加身份组"
         }
     },
     "prompt": {
@@ -1406,14 +1449,14 @@
         },
         "change_table_size": {
             "header": "最大显示记录",
-            "description": "限制从数据库读取记录到接口的数量，较大的数据表大小可能会影响内存用量和程序性能 （预设：1000）",
+            "description": "限制从数据库读取记录到接口的数量，较大的数据表大小可能会影响内存用量和程序性能 （默认值：1000）",
             "cancel": "取消",
             "save": "保存",
             "input_error": "请输入有效的行数"
         },
         "photon_lobby_timeout": {
             "header": "玩家超时阀值",
-            "description": "输入秒数（预设：3）",
+            "description": "输入秒数（默认值：3）",
             "cancel": "取消",
             "ok": "确定",
             "input_error": "请输入有效的秒数"
