--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -379,6 +379,7 @@
                     "header": "詳細設定",
                     "launch_options": "起動オプション",
                     "screenshot_metadata": "スクリーンショットのメタデータ",
+                    "vrc_registry_backup": "VRCのレジストリをバックアップ",
                     "common_folders": "共通フォルダ",
                     "pending_offline": {
                         "header": "オフラインの保留",
@@ -678,7 +679,7 @@
                 "private_count": "プライベート {count}",
                 "capacity_count": "最大人数 {count} ({max})",
                 "self_invite_tooltip": "自分を招待",
-                "refresh_instance_info": "Refresh Instance Info",
+                "refresh_instance_info": "インスタンス情報を更新",
                 "instance_full": "満員",
                 "instance_creator": "インスタンス作成者"
             },
@@ -801,6 +802,7 @@
                 "visibility_everyone": "表示範囲: 全員",
                 "visibility_friends": "表示範囲: フレンドのみ",
                 "visibility_hidden": "表示範囲: 自分のみ",
+                "moderation_tools": "管理用ツール",
                 "leave": "グループから抜ける"
             },
             "info": {
@@ -823,7 +825,7 @@
                 "role_updated_at": "更新日:",
                 "role_created_at": "作成日:",
                 "role_permissions": "権限:"
-                },
+            },
             "posts": {
                 "header": "アナウンス",
                 "visibility": "表示範囲:",
@@ -849,7 +851,9 @@
                 },
                 "unsubscribed_announcements": "お知らせ受信停止中",
                 "visibility": "表示範囲:",
-                "representing": "ネームプレート表示中"
+                "representing": "ネームプレート表示中",
+                "manager_notes": "管理用メモ:",
+                "search": "検索"
             },
             "gallery": {
                 "header": "写真"
@@ -867,7 +871,8 @@
             "header": "招待",
             "select_placeholder": "フレンドを選択",
             "invite_with_message": "メッセージ付きで招待を送信",
-            "invite": "招待を送信"
+            "invite": "招待を送信",
+            "friends_in_instance": "インスタンス内のフレンド"
         },
         "social_status": {
             "header": "ソーシャルステータス",
@@ -900,7 +905,7 @@
             "group_access_type": "グループアクセス",
             "group_access_type_members": "メンバー",
             "group_access_type_plus": "プラス",
-            "group_access_type_public": "パブリック",
+            "group_access_type_public": "Public",
             "region": "地域",
             "region_usw": "アメリカ西",
             "region_use": "アメリカ東",
@@ -972,7 +977,7 @@
             "author_tags": "タグ (コンマ区切り)",
             "content_tags": "コンテンツ タグ (コンマ区切り)",
             "content_horror": "ホラー",
-            "content_gore": "ゴア",
+            "content_gore": "グロ表現",
             "content_violence": "暴力",
             "content_adult": "成人向け",
             "content_sex": "性的要素",
@@ -983,7 +988,7 @@
             "header": "アバタータグを設定",
             "content_tags": "コンテンツ警告タグ",
             "content_horror": "ホラー",
-            "content_gore": "ゴア",
+            "content_gore": "グロ表現",
             "content_violence": "暴力",
             "content_adult": "成人向け",
             "content_sex": "性的要素",
@@ -1010,7 +1015,7 @@
             "header": "起動",
             "url": "URL",
             "short_url": "短縮URL",
-            "short_url_notice": "短縮URLは一定時間後に失効します",
+            "short_url_notice": "短縮URLは一定時間後に失効します。",
             "location": "場所",
             "copy_tooltip": "クリップボードにコピー",
             "start_as_desktop": "デスクトップモードで起動 (VR無し)",
@@ -1028,7 +1033,7 @@
         },
         "discord_names": {
             "header": "Discordの名前",
-            "description": "フレンドリストタブの「不足するエントリを読み込む」をクリックすると、フレンドリスト全体を検索することができます"
+            "description": "フレンドリストタブの「不足するエントリを読み込む」をクリックすると、フレンドリスト全体を検索することができます。"
         },
         "notification_position": {
             "header": "通知の位置",
@@ -1051,7 +1056,7 @@
         },
         "world_import": {
             "header": "お気に入りワールドをインポート",
-            "description": "ワールドIDのリストを入力してください",
+            "description": "ワールドIDのリストを入力してください。",
             "process_list": "処理リスト",
             "process_progress": "進捗:",
             "select_vrchat_group_placeholder": "グループを選択",
@@ -1068,7 +1073,7 @@
         },
         "avatar_import": {
             "header": "お気に入りアバターをインポート",
-            "description": "アバターIDのリストを入力してください",
+            "description": "アバターIDのリストを入力してください。",
             "process_list": "処理リスト",
             "process_progress": "進捗:",
             "select_group_placeholder": "グループを選択",
@@ -1084,7 +1089,7 @@
         },
         "friend_import": {
             "header": "お気に入りフレンドをインポート",
-            "description": "ユーザーIDのリストを入力してください",
+            "description": "ユーザーIDのリストを入力してください。",
             "process_list": "処理リスト",
             "process_progress": "進捗:",
             "select_group_placeholder": "グループを選択",
@@ -1235,27 +1240,27 @@
     "prompt": {
         "totp": {
             "header": "2段階認証",
-            "description": "認証アプリの数字を入力してください",
+            "description": "認証アプリの数字を入力してください。",
             "use_otp": "OTPを使う",
             "verify": "認証",
             "input_placeholder": "コード",
-            "input_error": "無効なコードです"
+            "input_error": "無効なコードです。"
         },
         "otp": {
             "header": "2段階認証",
-            "description": "保存したリカバリーコードのどれか一つを入力してください",
+            "description": "保存したリカバリーコードのどれか一つを入力してください。",
             "use_totp": "TOTPを使う",
             "verify": "認証",
             "input_placeholder": "コード",
-            "input_error": "無効なコードです"
+            "input_error": "無効なコードです。"
         },
         "email_otp": {
             "header": "2段階認証",
-            "description": "メールに送られてきた数字を入力してください",
+            "description": "メールに送られてきた数字を入力してください。",
             "resend": "メールを再送信",
             "verify": "認証",
             "input_placeholder": "コード",
-            "input_error": "無効なコードです"
+            "input_error": "無効なコードです。"
         },
         "primary_password": {
             "header": "プライマリーパスワードが必要です",
@@ -1263,124 +1268,124 @@
         },
         "change_favorite_group_name": {
             "header": "グループ名を変更",
-            "description": "新しい名前を入力してください",
+            "description": "新しい名前を入力してください。",
             "cancel": "キャンセル",
             "change": "変更",
             "input_placeholder": "名前",
-            "input_error": "名前が必要です",
+            "input_error": "名前が必要です。",
             "message": {
-                "success": "グループの名前を変更しました"
+                "success": "グループの名前を変更しました。"
             }
         },
         "direct_access_user_id": {
             "header": "ダイレクトアクセス",
-            "description": "ユーザーURL/IDを入力してください",
+            "description": "ユーザーURL/IDを入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "ユーザーURL/IDが必要です",
+            "input_error": "ユーザーURL/IDが必要です。",
             "message": {
-                "error": "無効なURL/IDです"
+                "error": "無効なURL/IDです。"
             }
         },
         "direct_access_username": {
             "header": "ダイレクトアクセス",
-            "description": "ユーザーネームを入力してください",
+            "description": "ユーザーネームを入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "ユーザーネームが必要です"
+            "input_error": "ユーザーネームが必要です。"
         },
         "direct_access_world_id": {
             "header": "ダイレクトアクセス",
-            "description": "ワールドURL/IDを入力してください",
+            "description": "ワールドURL/IDを入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "ワールドURL/IDが必要です",
+            "input_error": "ワールドURL/IDが必要です。",
             "message": {
-                "error": "無効なURL/IDです"
+                "error": "無効なURL/IDです。"
             }
         },
         "direct_access_avatar_id": {
             "header": "ダイレクトアクセス",
-            "description": "アバターURL/IDを入力してください",
+            "description": "アバターURL/IDを入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "アバターURL/IDが必要です",
+            "input_error": "アバターURL/IDが必要です。",
             "message": {
-                "error": "無効なURL/IDです"
+                "error": "無効なURL/IDです。"
             }
         },
         "direct_access_omni": {
             "header": "ダイレクトアクセス",
-            "description": "ユーザー/ワールド/インスタンス/アバター/グループURL/IDを入力してください",
+            "description": "ユーザー/ワールド/インスタンス/アバター/グループURL/IDを入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "URL/IDが必要です",
+            "input_error": "URL/IDが必要です。",
             "message": {
-                "error": "無効なURL/IDです"
+                "error": "無効なURL/IDです。"
             }
         },
         "notification_timeout": {
             "header": "通知のタイムアウト時間",
-            "description": "秒数を入力してください",
+            "description": "秒数を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字を入力してください"
+            "input_error": "有効な数字を入力してください。"
         },
         "overlay_message_timeout": {
             "header": "オーバーレイメッセージのタイムアウト時間",
-            "description": "秒数を入力してください",
+            "description": "秒数を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字を入力してください"
+            "input_error": "有効な数字を入力してください。"
         },
         "rename_avatar": {
             "header": "アバター名を変更",
-            "description": "アバター名を入力してください",
+            "description": "アバター名を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な名前を入力してください",
+            "input_error": "有効な名前を入力してください。",
             "message": {
-                "success": "アバター名を変更しました"
+                "success": "アバター名を変更しました。"
             }
         },
         "change_avatar_description": {
             "header": "アバターの説明を変更",
-            "description": "アバターの説明を入力してください",
+            "description": "アバターの説明を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な説明文を入力してください",
+            "input_error": "有効な説明文を入力してください。",
             "message": {
-                "success": "アバターの説明を変更しました"
+                "success": "アバターの説明を変更しました。"
             }
         },
         "rename_world": {
             "header": "ワールド名を変更",
-            "description": "ワールド名を入力してください",
+            "description": "ワールド名を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な名前を入力してください",
+            "input_error": "有効な名前を入力してください。",
             "message": {
-                "success": "ワールド名を変更しました"
+                "success": "ワールド名を変更しました。"
             }
         },
         "change_world_description": {
             "header": "ワールドの説明を変更",
-            "description": "ワールドの説明を入力してください",
+            "description": "ワールドの説明を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な説明文を入力してください",
+            "input_error": "有効な説明文を入力してください。",
             "message": {
-                "success": "ワールドの説明を変更しました"
+                "success": "ワールドの説明を変更しました。"
             }
         },
         "change_world_capacity": {
             "header": "最大人数を変更",
-            "description": "ワールドの最大人数を入力してください。最高値: 40",
+            "description": "ワールドの最大人数を入力してください。 (最高値: 40)",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字を入力してください",
+            "input_error": "有効な数字を入力してください。",
             "message": {
-                "success": "ワールドの最大人数を変更しました"
+                "success": "ワールドの最大人数を変更しました。"
             }
         },
         "change_world_recommended_capacity": {
@@ -1395,13 +1400,13 @@
         },
         "change_world_preview": {
             "header": "YouTube プレビュー動画を変更",
-            "description": "ワールドのYouTube 動画リンクを入力してください",
+            "description": "ワールドのYouTube 動画リンクを入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効なYouTube URLを入力してください",
+            "input_error": "有効なYouTube URLを入力してください。",
             "message": {
-                "error": "無効なYouTube URLです",
-                "success": "ワールドのYouTube プレビュー動画を変更しました"
+                "error": "無効なYouTube URLです。",
+                "success": "ワールドのYouTube プレビュー動画を変更しました。"
             }
         },
         "change_table_size": {
@@ -1409,48 +1414,48 @@
             "description": "データベースからUIページに読み込まれるエントリの量を制限します。テーブル数が多いとRAM使用量とパフォーマンスに影響を及ぼす可能性があります。 (デフォルト:1000, 最高値: 10000)",
             "cancel": "キャンセル",
             "save": "保存",
-            "input_error": "有効な数字を入力してください"
+            "input_error": "有効な数字を入力してください。"
         },
         "photon_lobby_timeout": {
             "header": "ユーザータイムアウト しきい値",
-            "description": "タイムアウトまでの秒数を入力してください (デフォルト: 3)",
+            "description": "タイムアウトまでの秒数を入力してください。 (デフォルト: 3)",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字を入力してください"
+            "input_error": "有効な数字を入力してください。"
         },
         "auto_clear_cache": {
             "header": "VRCX キャッシュの自動消去タイマー",
             "description": "消去までの時間を入力してください。長い時間を指定するとRAM使用量とパフォーマンスに影響を及ぼす可能性があります。 (デフォルト: 24, 無効化: 0)",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字を入力してください"
+            "input_error": "有効な数字を入力してください。"
         },
         "new_local_favorite_group": {
             "header": "新しいグループ",
-            "description": "お気に入りワールド グループ名を入力してください",
+            "description": "お気に入りワールド グループ名を入力してください。",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "名前を入力してください",
+            "input_error": "名前を入力してください。",
             "message": {
                 "error": "このグループ名は既に {name} として存在しています。"
             }
         },
         "local_favorite_group_rename": {
             "header": "グループ名を変更",
-            "description": "お気に入りワールド グループ名を入力してください",
+            "description": "お気に入りワールド グループ名を入力してください。",
             "cancel": "キャンセル",
             "save": "保存",
-            "input_error": "名前を入力してください",
+            "input_error": "名前を入力してください。",
             "message": {
                 "error": "このグループ名は既に {name} として存在しています。"
             }
         },
         "pending_offline_delay": {
             "header": "オフラインの保留時間",
-            "description": "オフライン保留の待機秒数を指定してください (デフォルト: 110)",
+            "description": "オフライン保留の待機秒数を指定してください。 (デフォルト: 110)",
             "cancel": "キャンセル",
             "save": "保存",
-            "input_error": "有効な数字を入力してください"
+            "input_error": "有効な数字を入力してください。"
         }
     },
     "table": {
